--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,34 @@
 
 ul {
    list-style: none;
+   margin: 0;
+   padding: 0;
+}
+
+a {
+   text-decoration: none;
+   color: currentColor;
+}
+
+ol {
+   margin: 0;
+   padding: 0;
+}
+
+h1,
+h2,
+h3,
+p {
+   margin: 0;
+}
+
+.container {
+   width: 1200px;
+   padding-left: 15px;
+   padding-right: 15px;
+   margin-left: auto;
+   margin-right: auto;
+   outline: 1px dotted green;
 }
 
 /* стиль загальний -------------------------------------*/
@@ -44,6 +72,11 @@ ul {
    letter-spacing: 0.02em;
 
    background-color: var(--main-color);
+}
+
+.header {
+   margin-top: 24px;
+   margin-bottom: 25px;
 }
 
 .logo-header {
@@ -94,6 +127,13 @@ ul {
    background-color: var(--grey-color);
 }
 
+.hero {
+   margin-top: 0;
+   margin-bottom: 0;
+   display: block;
+   text-align: center;
+}
+
 .hero-title {
    color: var(--main-color);
    text-transform: uppercase;
@@ -101,7 +141,19 @@ ul {
    font-size: 44px;
    line-height: 1.36;
    letter-spacing: 0.06em;
+   margin-left: auto;
+   margin-right: auto;
+}
 
+.hero-button {
+   margin-top: 30;
+   margin-bottom: 200px;
+}
+
+.hero-title {
+   padding-top: 200px;
+   padding-bottom: 0px;
+   width: 696px;
 }
 
 /* стиль Головної кнопки та кнопок на другій страниці*/
@@ -111,8 +163,13 @@ ul {
    font-size: 16px;
    line-height: 1.85;
    letter-spacing: 0.06em;
-
+   padding-top: 10px;
+   padding-bottom: 10px;
+   padding-left: 32px;
+   padding-right: 32px;
    cursor: pointer;
+   margin-top: 30px;
+   margin-bottom: 200px;
 
    background-color: var(--accent-color);
 }
@@ -125,33 +182,108 @@ ul {
 
 
 /* стиль Особливості-------------------------------------*/
+
+.galery-title-list {
+   display: flex;
+}
+
+.subtitle-list {
+   width: 270px;
+   margin-right: 30px;
+
+}
+
+.subtitle-list:last-child {
+   margin-right: 0px;
+}
+
+
+.special-list {
+   margin-top: 94px;
+   margin-bottom: 94px;
+}
+
 .special-subtitle {
    color: var(--title-text-color);
    font-size: 14px;
    font-weight: 700;
    line-height: 1.17;
-
    text-transform: uppercase;
 }
 
+.special-subtitle {
+   margin-top: 0;
+   margin-bottom: 10px;
+}
+
+.subtitle-list {
+   width: 270px;
+}
+
+
+
 /* стиль Галерея-------------------------------------*/
+.galery-list {
+   margin-top: 0px;
+   margin-bottom: 94px;
+}
+
 .galery-title {
    color: var(--title-text-color);
    font-size: 36px;
    font-weight: 700;
    line-height: 1.16;
+   margin-top: 0;
+   margin-bottom: 50px;
+   text-align: center;
 }
 
+.galery-title-img {
+   display: flex;
+}
+
+.galery-img {
+   display: inline-block;
+   margin-right: 30px;
+}
+
+.galery-img:last-child {
+   margin-right: 0px;
+}
+
+
 /* стиль Команда-------------------------------------*/
+
+.team-container {
+   background-color: var(--accent-second-color);
+   padding-top: 94px;
+   padding-bottom: 94px;
+}
+
 .team-title {
    color: var(--title-text-color);
    font-size: 36px;
    font-weight: 700;
    line-height: 1.16;
+   margin-top: 0;
+   margin-bottom: 50px;
+   text-align: center;
+
 }
 
-.team {
-   background-color: var(--accent-second-color);
+.name-list {
+   display: inline-block;
+   box-sizing: border-box;
+   width: 270px;
+   height: 368px;
+
+   box-sizing: border-box;
+   background-color: #FFFFFF;
+   border-bottom-right-radius: 4px;
+   border-bottom-left-radius: 4px;
+   box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.12);
+   margin-right: 30px;
+   text-align: center;
 }
 
 .team-name {
@@ -159,13 +291,45 @@ ul {
    font-size: 16px;
    font-weight: 500;
    line-height: 1.18;
+   margin-top: 30px;
+   margin-bottom: 0;
+}
+
+.name-list:last-child {
+   margin-right: 0px;
+}
+
+.team-list {
+   margin-top: 0px;
+   margin-bottom: 0px;
+}
+
+.team-position {
+   margin-top: 10px;
+   margin-bottom: 30px;
+}
+
+.team-container {
+   width: 1200px;
+   padding-left: 15px;
+   padding-right: 15px;
+   margin-left: auto;
+   margin-right: auto;
+   outline: 1px dotted green;
 }
 
 /* стиль Футер-------------------------------------*/
 .footer {
    background-color: var(--grey-color);
    text-decoration: none;
+   padding-top: 60px;
+   padding-bottom: 60px;
 }
+
+/*.footer-list {
+   margin-top: 0px;
+   margin-bottom: 0px;
+}*/
 
 .logo-footer {
    color: var(--main-color);
@@ -174,7 +338,10 @@ ul {
    font-weight: 700;
    font-size: 32px;
    line-height: 1.17;
+   margin-top: 60px;
+   margin-bottom: 100px;
 }
+
 
 .address {
    color: var(--main-color);
@@ -184,11 +351,26 @@ ul {
    line-height: 1.7;
 }
 
+.address {
+   margin-top: 20px;
+   margin-bottom: 0px;
+}
+
 .mail-footer,
 .tel-footer {
    color: var(--footer-color);
    text-decoration: none;
    font-style: normal;
+}
+
+.mail-footer {
+   margin-top: 9px;
+   margin-bottom: 0px;
+}
+
+.tel-footer {
+   margin-top: 9px;
+   margin-bottom: 0px;
 }
 
 .mail:hover,
