--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ a {
    color: currentColor;
 }
 
+li,
 ol {
    margin: 0;
    padding: 0;
@@ -65,6 +66,46 @@ p {
 }
 
 /* стиль хедера-------------------------------------*/
+/*головний блок*/
+.header-list {
+   display: flex;
+}
+
+/* logo-header  и так блочний*/
+
+.header-list {
+   display: flex;
+   align-items: center;
+}
+
+.style-nav {
+   display: flex;
+}
+
+
+
+.logo-header {
+   padding-right: 93px;
+   padding-top: 24px;
+   padding-bottom: 24px;
+}
+
+.style-nav .link:first-child {
+   padding-left: 50px;
+}
+
+.info {
+   display: flex;
+   margin-left: auto;
+}
+
+.info .tel {
+   padding-left: 50px;
+}
+
+
+
+
 
 .header {
    font-weight: 500;
@@ -72,6 +113,7 @@ p {
    letter-spacing: 0.02em;
 
    background-color: var(--main-color);
+   border-bottom: 1px solid #ECECEC;
 }
 
 .header {
@@ -226,6 +268,8 @@ p {
 .galery-list {
    margin-top: 0px;
    margin-bottom: 94px;
+   padding-bottom: 0;
+
 }
 
 .galery-title {
@@ -240,11 +284,14 @@ p {
 
 .galery-title-img {
    display: flex;
+   justify-content: center;
 }
+
 
 .galery-img {
    display: inline-block;
    margin-right: 30px;
+   padding-bottom: 0;
 }
 
 .galery-img:last-child {
@@ -302,6 +349,12 @@ p {
 .team-list {
    margin-top: 0px;
    margin-bottom: 0px;
+}
+
+
+.team-title-list {
+   display: flex;
+   justify-content: center;
 }
 
 .team-position {
@@ -377,6 +430,12 @@ p {
 .mail:focus {
    color: var(--accent-color);
 }
+
+.footer-list {
+   padding-left: 0;
+}
+
+
 
 /* стиль Кнопки другої сторінки-------------------------*/
 .button-secondary {
