--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ p {
 }
 
 .container {
-   width: 1200px;
+   width: 1170px;
    padding-left: 15px;
    padding-right: 15px;
    margin-left: auto;
@@ -67,11 +67,6 @@ p {
 
 /* стиль хедера-------------------------------------*/
 /*головний блок*/
-.header-list {
-   display: flex;
-}
-
-/* logo-header  и так блочний*/
 
 .header-list {
    display: flex;
@@ -82,16 +77,14 @@ p {
    display: flex;
 }
 
-
+.style-nav .link:first-child {
+   margin-left: 50px;
+}
 
 .logo-header {
    padding-right: 93px;
    padding-top: 24px;
    padding-bottom: 24px;
-}
-
-.style-nav .link:first-child {
-   padding-left: 50px;
 }
 
 .info {
@@ -100,12 +93,8 @@ p {
 }
 
 .info .tel {
-   padding-left: 50px;
+   margin-left: 50px;
 }
-
-
-
-
 
 .header {
    font-weight: 500;
@@ -116,10 +105,10 @@ p {
    border-bottom: 1px solid #ECECEC;
 }
 
-.header {
-   margin-top: 24px;
-   margin-bottom: 25px;
-}
+/*.header {
+   margin-top: 0px;
+   margin-bottom: 0px;
+}*/
 
 .logo-header {
    color: var(--title-text-color);
@@ -135,6 +124,9 @@ p {
    font-size: 14px;
    line-height: 1.14;
    text-decoration: none;
+   padding-top: 25px;
+   padding-bottom: 25px;
+   display: block;
 }
 
 .link:hover {
@@ -172,7 +164,6 @@ p {
 .hero {
    margin-top: 0;
    margin-bottom: 0;
-   display: block;
    text-align: center;
 }
 
@@ -227,12 +218,18 @@ p {
 
 .galery-title-list {
    display: flex;
+   flex-wrap: wrap;
+   margin-top: 94px;
+   margin-bottom: 94px;
 }
 
 .subtitle-list {
    width: 270px;
    margin-right: 30px;
+}
 
+.subtitle-list .p {
+   margin-bottom: 10px;
 }
 
 .subtitle-list:last-child {
@@ -240,10 +237,10 @@ p {
 }
 
 
-.special-list {
+/*.special-list {
    margin-top: 94px;
    margin-bottom: 94px;
-}
+}*/
 
 .special-subtitle {
    color: var(--title-text-color);
@@ -251,42 +248,40 @@ p {
    font-weight: 700;
    line-height: 1.17;
    text-transform: uppercase;
-}
-
-.special-subtitle {
    margin-top: 0;
    margin-bottom: 10px;
 }
 
 .subtitle-list {
    width: 270px;
+   display: block;
 }
 
 
 
 /* стиль Галерея-------------------------------------*/
-.galery-list {
+.galery {
    margin-top: 0px;
    margin-bottom: 94px;
    padding-bottom: 0;
-
 }
 
 .galery-title {
+   width: 376px;
    color: var(--title-text-color);
    font-size: 36px;
    font-weight: 700;
    line-height: 1.16;
    margin-top: 0;
    margin-bottom: 50px;
-   text-align: center;
+   margin-left: auto;
+   margin-right: auto;
 }
 
 .galery-title-img {
    display: flex;
-   justify-content: center;
+   flex-wrap: wrap;
 }
-
 
 .galery-img {
    display: inline-block;
@@ -298,24 +293,23 @@ p {
    margin-right: 0px;
 }
 
-
 /* стиль Команда-------------------------------------*/
 
-.team-container {
+.team {
    background-color: var(--accent-second-color);
    padding-top: 94px;
    padding-bottom: 94px;
 }
 
 .team-title {
+   width: 264px;
    color: var(--title-text-color);
    font-size: 36px;
    font-weight: 700;
    line-height: 1.16;
-   margin-top: 0;
    margin-bottom: 50px;
-   text-align: center;
-
+   margin-left: auto;
+   margin-right: auto;
 }
 
 .name-list {
@@ -363,7 +357,6 @@ p {
 }
 
 .team-container {
-   width: 1200px;
    padding-left: 15px;
    padding-right: 15px;
    margin-left: auto;
@@ -379,11 +372,6 @@ p {
    padding-bottom: 60px;
 }
 
-/*.footer-list {
-   margin-top: 0px;
-   margin-bottom: 0px;
-}*/
-
 .logo-footer {
    color: var(--main-color);
    text-decoration: none;
@@ -394,7 +382,6 @@ p {
    margin-top: 60px;
    margin-bottom: 100px;
 }
-
 
 .address {
    color: var(--main-color);
@@ -435,8 +422,6 @@ p {
    padding-left: 0;
 }
 
-
-
 /* стиль Кнопки другої сторінки-------------------------*/
 .button-secondary {
    color: var(--title-text-color);
@@ -444,11 +429,16 @@ p {
    font-size: 16px;
    line-height: 1.85;
    letter-spacing: 0.03em;
-
    cursor: pointer;
-
    background-color: var(--accent-second-color);
+   display: flex;
+
 }
+
+.button-secondary:first-child {
+   margin-left: 8px;
+}
+
 
 .button-secondary:hover,
 .button-secondary:focus {
@@ -462,6 +452,47 @@ p {
 }
 
 /* стиль Контент-------------------------------------*/
+.content {
+   margin-top: 100px;
+   margin-bottom: 94px;
+
+}
+
+.caption-list {
+   display: flex;
+   justify-content: center;
+   padding-bottom: 50px;
+}
+
+/*формування карток*/
+
+.caption-card {
+   display: flex;
+   flex-wrap: wrap;
+}
+
+.caption-link {
+   width: 370px;
+   border-bottom: 1px solid #EEEEEE;
+   border-right: 1px solid red;
+   border-left: 1px solid red;
+   width: 370px;
+   box-sizing: border-box;
+   margin-right: 20px;
+   margin-bottom: 30px;
+   display: inline-block;
+   padding: 0;
+
+   /*
+   
+   text-decoration: none;
+  
+   text-align: center;*/
+}
+
+/*
+.caption-subcard {}*/
+
 .caption-title {
    color: var(--title-text-color);
    font-size: 18px;
@@ -474,9 +505,10 @@ p {
    color: var(--main-text-color);
    font-size: 16px;
    line-height: 1.8;
+   padding-bottom: 20px;
 }
 
-.caption-link {
-   text-decoration: none;
-
+.pict {
+   display: inline-block;
+   padding: 0;
 }
