--- a/css/main.css
+++ b/css/main.css
@@ -66,35 +66,9 @@ p {
 }
 
 /* стиль хедера-------------------------------------*/
+
 /*головний блок*/
 
-.header-list {
-   display: flex;
-   align-items: center;
-}
-
-.style-nav {
-   display: flex;
-}
-
-.style-nav .link:first-child {
-   margin-left: 50px;
-}
-
-.logo-header {
-   padding-right: 93px;
-   padding-top: 24px;
-   padding-bottom: 24px;
-}
-
-.info {
-   display: flex;
-   margin-left: auto;
-}
-
-.info .tel {
-   margin-left: 50px;
-}
 
 .header {
    font-weight: 500;
@@ -105,10 +79,38 @@ p {
    border-bottom: 1px solid #ECECEC;
 }
 
-/*.header {
-   margin-top: 0px;
-   margin-bottom: 0px;
-}*/
+.header-list {
+   display: flex;
+   align-items: center;
+}
+
+.logo-header {
+   padding-right: 93px;
+
+}
+
+.style-nav {
+   display: flex;
+}
+
+.style-nav .link {
+   padding-top: 32px;
+   padding-bottom: 32px;
+}
+
+.style-nav .link:not(:last-child) {
+   padding-right: 50px;
+}
+
+
+.info {
+   display: flex;
+   margin-left: auto;
+}
+
+.info .mail {
+   padding-right: 50px;
+}
 
 .logo-header {
    color: var(--title-text-color);
@@ -131,7 +133,6 @@ p {
 
 .link:hover {
    color: var(--accent-color);
-
 }
 
 .current {
@@ -156,18 +157,21 @@ p {
    color: var(--accent-color);
 }
 
-/* стиль ГЕГОЯ-------------------------------------*/
+/* стиль ХЕДЕРА}-------------------------------------*/
+
+
+/* стиль ГЕГОЙ-------------------------------------*/
 .hero {
    background-color: var(--grey-color);
 }
 
 .hero {
-   margin-top: 0;
-   margin-bottom: 0;
    text-align: center;
+
 }
 
 .hero-title {
+   width: 696px;
    color: var(--main-color);
    text-transform: uppercase;
    font-weight: 900;
@@ -176,21 +180,46 @@ p {
    letter-spacing: 0.06em;
    margin-left: auto;
    margin-right: auto;
+   padding-bottom: 30px;
+}
+
+.title {
+   padding-top: 200px;
+   padding-bottom: 200px;
 }
 
 .hero-button {
-   margin-top: 30;
-   margin-bottom: 200px;
+   color: var(--main-color);
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 1.85;
+   letter-spacing: 0.06em;
+
+   padding-top: 10px;
+   padding-bottom: 10px;
+   padding-left: 32px;
+   padding-right: 32px;
+   cursor: pointer;
+
+   background-color: var(--accent-color);
 }
 
-.hero-title {
-   padding-top: 200px;
-   padding-bottom: 0px;
-   width: 696px;
+.hero-button:hover,
+.hero-button:focus {
+   background-color: #188CE8;
 }
+
+.current-button {
+   color: var(--main-color);
+   background-color: var(--accent-color);
+}
+
+/* стиль ГЕГОЙ-------------------------------------*/
+
+
 
 /* стиль Головної кнопки та кнопок на другій страниці*/
-.button {
+/*.button {
    color: var(--main-color);
    font-weight: 700;
    font-size: 16px;
@@ -201,8 +230,6 @@ p {
    padding-left: 32px;
    padding-right: 32px;
    cursor: pointer;
-   margin-top: 30px;
-   margin-bottom: 200px;
 
    background-color: var(--accent-color);
 }
@@ -210,22 +237,26 @@ p {
 .button:hover,
 .button:focus {
    background-color: #188CE8;
-}
+}*/
 
 
 
 /* стиль Особливості-------------------------------------*/
 
+/*.special {
+   padding-top: 94px;
+   padding-bottom: 94px;
+}
+*/
 .galery-title-list {
    display: flex;
    flex-wrap: wrap;
-   margin-top: 94px;
-   margin-bottom: 94px;
+   padding-bottom: 94px;
 }
 
 .subtitle-list {
    width: 270px;
-   margin-right: 30px;
+   padding-right: 30px;
 }
 
 .subtitle-list .p {
@@ -233,14 +264,8 @@ p {
 }
 
 .subtitle-list:last-child {
-   margin-right: 0px;
+   padding-right: 0px;
 }
-
-
-/*.special-list {
-   margin-top: 94px;
-   margin-bottom: 94px;
-}*/
 
 .special-subtitle {
    color: var(--title-text-color);
@@ -248,23 +273,23 @@ p {
    font-weight: 700;
    line-height: 1.17;
    text-transform: uppercase;
-   margin-top: 0;
-   margin-bottom: 10px;
+   padding-top: 94px;
+   padding-bottom: 10px;
 }
 
-.subtitle-list {
-   width: 270px;
-   display: block;
-}
-
+/* стиль Особливості-------------------------------------*/
 
 
 /* стиль Галерея-------------------------------------*/
-.galery {
-   margin-top: 0px;
-   margin-bottom: 94px;
-   padding-bottom: 0;
+/*.galery {
+   padding-top: 0px;
+   padding-bottom: 94px;
 }
+
+.galery-title-list {
+   padding-top: 94px;
+   padding-bottom: 94px;
+}*/
 
 .galery-title {
    width: 376px;
@@ -272,8 +297,8 @@ p {
    font-size: 36px;
    font-weight: 700;
    line-height: 1.16;
-   margin-top: 0;
-   margin-bottom: 50px;
+
+   padding-bottom: 50px;
    margin-left: auto;
    margin-right: auto;
 }
@@ -284,90 +309,83 @@ p {
 }
 
 .galery-img {
-   display: inline-block;
-   margin-right: 30px;
-   padding-bottom: 0;
+   padding-right: 30px;
+   padding-bottom: 94px;
 }
 
 .galery-img:last-child {
-   margin-right: 0px;
+   padding-right: 0px;
 }
+
+.pict {
+   display: block;
+}
+
+/* стиль Галерея-------------------------------------*/
 
 /* стиль Команда-------------------------------------*/
 
 .team {
    background-color: var(--accent-second-color);
-   padding-top: 94px;
-   padding-bottom: 94px;
+   text-align: center;
 }
 
 .team-title {
-   width: 264px;
    color: var(--title-text-color);
    font-size: 36px;
    font-weight: 700;
    line-height: 1.16;
-   margin-bottom: 50px;
-   margin-left: auto;
-   margin-right: auto;
+   padding-top: 94px;
 }
 
-.name-list {
-   display: inline-block;
+.team-list {
+   padding-top: 50px;
+   display: flex;
+}
+
+.personal-pict {
+   display: block;
    box-sizing: border-box;
    width: 270px;
-   height: 368px;
 
    box-sizing: border-box;
    background-color: #FFFFFF;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
    box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.12);
-   margin-right: 30px;
    text-align: center;
 }
 
-.team-name {
+.personal-card {
+   padding-bottom: 94px;
+}
+
+.personal-card:not(:last-child) {
+   margin-right: 30px;
+}
+
+.personal-name {
    color: var(--title-text-color);
    font-size: 16px;
    font-weight: 500;
    line-height: 1.18;
-   margin-top: 30px;
-   margin-bottom: 0;
+   padding-top: 30px;
 }
 
-.name-list:last-child {
-   margin-right: 0px;
+.personal-position {
+   padding-top: 10px;
+   padding-bottom: 30px;
 }
 
-.team-list {
-   margin-top: 0px;
-   margin-bottom: 0px;
-}
+/* стиль Команда-------------------------------------*/
 
-
-.team-title-list {
-   display: flex;
-   justify-content: center;
-}
-
-.team-position {
-   margin-top: 10px;
-   margin-bottom: 30px;
-}
-
-.team-container {
-   padding-left: 15px;
-   padding-right: 15px;
-   margin-left: auto;
-   margin-right: auto;
-   outline: 1px dotted green;
-}
 
 /* стиль Футер-------------------------------------*/
 .footer {
    background-color: var(--grey-color);
-   text-decoration: none;
+}
+
+.footer-title {
    padding-top: 60px;
    padding-bottom: 60px;
 }
@@ -379,8 +397,6 @@ p {
    font-weight: 700;
    font-size: 32px;
    line-height: 1.17;
-   margin-top: 60px;
-   margin-bottom: 100px;
 }
 
 .address {
@@ -389,11 +405,7 @@ p {
    font-style: normal;
    font-size: 14px;
    line-height: 1.7;
-}
-
-.address {
-   margin-top: 20px;
-   margin-bottom: 0px;
+   padding-top: 20px;
 }
 
 .mail-footer,
@@ -404,26 +416,33 @@ p {
 }
 
 .mail-footer {
-   margin-top: 9px;
-   margin-bottom: 0px;
+   padding-bottom: 9px;
 }
 
-.tel-footer {
-   margin-top: 9px;
-   margin-bottom: 0px;
-}
+/*.tel-footer {
+   padding-bottom: 60px;
+}*/
 
-.mail:hover,
-.mail:focus {
+.mail-footer:hover,
+.mail-footer {
    color: var(--accent-color);
 }
 
-.footer-list {
-   padding-left: 0;
-}
 
 /* стиль Кнопки другої сторінки-------------------------*/
-.button-secondary {
+
+.portfolio-btn {
+   display: flex;
+}
+
+.btn-menu {
+   display: flex;
+   margin: auto;
+   margin-top: 94px;
+   margin-bottom: 50px;
+}
+
+.btn-secondary {
    color: var(--title-text-color);
    font-weight: 500;
    font-size: 16px;
@@ -431,84 +450,83 @@ p {
    letter-spacing: 0.03em;
    cursor: pointer;
    background-color: var(--accent-second-color);
-   display: flex;
-
+   padding-left: 22px;
+   padding-right: 22px;
+   padding-top: 6px;
+   padding-bottom: 6px;
 }
 
-.button-secondary:first-child {
-   margin-left: 8px;
+.btn-list:not(:last-child) {
+   margin-right: 10px;
 }
 
-
-.button-secondary:hover,
-.button-secondary:focus {
+.current-btn-secondary {
    color: var(--main-color);
    background-color: var(--accent-color);
 }
 
-.current-button {
+.btn-secondary:hover,
+.btn-secondary:focus {
    color: var(--main-color);
    background-color: var(--accent-color);
 }
 
-/* стиль Контент-------------------------------------*/
-.content {
-   margin-top: 100px;
-   margin-bottom: 94px;
+/* стиль ПОРТФОЛІО-------------------------------*/
 
-}
-
-.caption-list {
+.portfolio-menu-card {
    display: flex;
-   justify-content: center;
-   padding-bottom: 50px;
 }
 
-/*формування карток*/
-
-.caption-card {
+.portfolio-menu {
    display: flex;
    flex-wrap: wrap;
+   padding-bottom: 94px;
 }
 
-.caption-link {
-   width: 370px;
-   border-bottom: 1px solid #EEEEEE;
-   border-right: 1px solid red;
-   border-left: 1px solid red;
-   width: 370px;
+.portfolio-card {
    box-sizing: border-box;
-   margin-right: 20px;
-   margin-bottom: 30px;
-   display: inline-block;
-   padding: 0;
 
-   /*
-   
-   text-decoration: none;
-  
-   text-align: center;*/
+   display: block;
+   margin-right: 30px;
+   margin-bottom: 30px;
 }
 
-/*
-.caption-subcard {}*/
+.portfolio-card:nth-child(3n + 3) {
+   margin-right: 0px;
+}
 
-.caption-title {
+
+.portfolio-card:nth-last-child(-n + 3) {
+   margin-bottom: 0px;
+}
+
+
+.caption-subcard {
+   border-bottom: 1px solid #EEEEEE;
+   border-right: 1px solid #EEEEEE;
+   border-left: 1px solid #EEEEEE;
+   text-align: center;
+}
+
+.portfolio-name {
    color: var(--title-text-color);
    font-size: 18px;
    font-weight: 700;
    line-height: 2;
    letter-spacing: 0.06em;
+   padding-top: 20px;
+
 }
 
-.caption-subtitle {
+.portfolio-site {
    color: var(--main-text-color);
    font-size: 16px;
    line-height: 1.8;
+   padding-top: 8px;
    padding-bottom: 20px;
 }
 
 .pict {
-   display: inline-block;
+   display: block;
    padding: 0;
 }
