--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,14 @@
    --main-color: #FFFFFF;
 }
 
+*,
+::before,
+::after {
+   box-sizing: border-box;
+}
+
+
+
 ul {
    list-style: none;
    margin: 0;
