--- a/css/main.css
+++ b/css/main.css
@@ -327,11 +327,11 @@ p {
 }
 
 .galery-img {
-   padding-right: 30px;
+   margin-right: 30px;
 }
 
 .galery-img:last-child {
-   padding-right: 0px;
+   margin-right: 0px;
 }
 
 .pict {
