--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,11 @@ p {
    letter-spacing: 0.03em;
 }
 
+.visually-hidden {
+   position: fixed;
+   transform: scale(0);
+}
+
 /* стиль хедера-------------------------------------*/
 
 /*головний блок*/
@@ -408,6 +413,7 @@ p {
 
 /* стиль Команда-------------------------------------*/
 
+"hidden"aria-hidden="true"
 
 /* стиль Футер-------------------------------------*/
 .footer {
