--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,11 @@ p {
 
 /*головний блок*/
 
+.section.header {
+   padding-top: 0px;
+   padding-bottom: 0px;
+}
+
 .header {
    font-weight: 500;
    line-height: 1.17;
