--- a/css/main.css
+++ b/css/main.css
@@ -549,14 +549,14 @@ section.work {
    font-weight: 700;
    line-height: 2;
    letter-spacing: 0.06em;
-
+   margin-bottom: 4px;
 }
 
 .portfolio-site {
    color: var(--main-text-color);
    font-size: 16px;
    line-height: 1.8;
-   padding-top: 8px;
+
 }
 
 .pict {
